# FastMarchingMethod

./: .gitignore  CMakeLists.txt  README.md  a.out  domain.cpp  goal2.txt  lib.h  main.cpp  node.txt  node2.txt  node3.txt  rectangle.txt
lib/: lib.h
src/: domain.cpp  heap.cpp  main.cpp
